# writing_agent

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
scripts/: init_database.py
src/: main.py
src/database/: __init__.py  checkpointer.py  database.py  models.py
src/graph/: __init__.py  builder.py  nodes.py  state.py
src/mcp_agreement/: __init__.py  multi_mcp.py
src/prompts/: planner.md  researcher.md  writer.md
src/routes/: __init__.py  chat.py
src/schemas/: __init__.py  chat.py
src/tools/: __init__.py  tools.py
