[project]
name = "my-agent-project"
version = "0.1.0"
description = "多Agent研究助手"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain-mcp-adapters>=0.1.0",
    "pymysql>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
